--- a/doc.xhtml
+++ b/doc.xhtml
@@ -32,7 +32,7 @@
         <td valign="top"><b>Description</b></td>
         <td align="center" valign="top"><b>Required</b></td>
       </tr>
-      <tr>
+<tr>
         <td valign="top">(a|A)ntHome</td>
         <td valign="top">Where Ant has been installed.</td>
         <td align="center">No - but then the environment variable
@@ -150,6 +150,6 @@
 </pre>
 
     <hr/>
-      <p align="center">Copyright &#169; 2005 Stefan Bodewig. All rights Reserved.</p>
+      <p align="center">Copyright &#169; 2005-2009 Stefan Bodewig. All rights Reserved.</p>
   </body>
 </html>
